--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Roadtrip</title>
+  <title>På spåret</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
