--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <h1>Welcome to My Website!</h1>
+    <h1>Vart är vi på väg?</h1>
     <p>Enter your answer below:</p>
     <input type="text" id="userInput">
     <button onclick="submitAnswer()">Submit</button>
