--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 </head>
 <body>
     <h1>Vart är vi på väg?</h1>
+    <h2>Additional Text Box</h2>
+    <p>Enter additional information below:</p>
+    <input type="text" id="additionalInput">
     <p>Enter your answer below:</p>
     <input type="text" id="userInput">
     <button onclick="submitAnswer()">Submit</button>
