--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
 </head>
 <body>
     <h1>Vart är vi på väg?</h1>
-    <h2>Additional Text Box</h2>
-    <p>Enter additional information below:</p>
-    <input type="text" id="additionalInput">
+    <h2>10 poäng</h2>
+    <p>Resan tar sin början här och leder dig söderut, till en plats där historia och nutid sammanflätas. Väl i hamn kan du övernatta på kacklande biprodukt, hoppas ni behagar.</p>
     <p>Enter your answer below:</p>
     <input type="text" id="userInput">
     <button onclick="submitAnswer()">Submit</button>
