--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 <head>
   <title>På spåret</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
+  <style>
+    body {
+      text-align: center;
+    }
+    h1, h2, p {
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
     <h1>Vart är vi på väg?</h1>
