--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </style>
 </head>
 <body>
+    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.biljettkiosken.se%2Fevent%2F190213-stuk-pizza_och_dryck_pa_sparet_pub&psig=AOvVaw3UvHgrpslLcfwoVtmm6x4W&ust=1686767380607000&source=images&cd=vfe&ved=0CBEQjRxqFwoTCKizsqbwwP8CFQAAAAAdAAAAABAE" alt="På spåret logga">
     <h1>Vart är vi på väg?</h1>
     <h2>10 poäng</h2>
     <p>Resan tar sin början här och leder dig söderut, till en plats där historia och nutid sammanflätas. Väl i hamn kan du övernatta på kacklande biprodukt, hoppas ni behagar.</p>
