--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>På spåret</title>
+  
   <link rel="stylesheet" type="text/css" href="styles.css">
   <style>
     body {
@@ -9,6 +10,10 @@
     }
     h1, h2, p {
       text-align: center;
+    }
+    img {
+      width: 50%;
+      height: auto;
     }
   </style>
 </head>
