added file path to correct and incorrect on button

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <p>Resan tar sin början här och leder dig söderut, till en plats där historia och nutid sammanflätas. Väl i hamn kan du övernatta på kacklande biprodukt, hoppas ni behagar.</p>
     <p>Enter your answer below:</p>
     <input type="text" id="userInput">
-    <button onclick="submitAnswer()">Submit</button>
+    <button onclick="checkAnswer()">Submit</button>
   
     <script src="script.js"></script>
 </body>
