ändrade bort extra text

--- a/correct.html
+++ b/correct.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>På spåret</title>
+  <title>Rätt!</title>
   
   <link rel="stylesheet" type="text/css" href="styles.css">
   <style>
@@ -19,13 +19,8 @@
 </head>
 <body>
     <img src="https://www.biljettkiosken.se/imgdb/biljettkiosken/stuk/events/6673-big.jpg" alt="På spåret logga">
-    <h1>Vart är vi på väg?</h1>
-    <h2>10 poäng</h2>
-    <p>Resan tar sin början här och leder dig söderut, till en plats där historia och nutid sammanflätas. Väl i hamn kan du övernatta på kacklande biprodukt, hoppas ni behagar.</p>
-    <p>Enter your answer below:</p>
-    <input type="text" id="userInput">
-    <button onclick="checkAnswer()">Submit</button>
-  
+    <h1>Du har rätt!</h1>
+    <h2>Vi ska till Göteborg!</h2>
     <script src="script.js"></script>
 </body>
 </html>
