--- a/8 poäng.html
+++ b/8 poäng.html
@@ -26,6 +26,6 @@
     <input type="text" id="userInput">
     <button onclick="checkAnswer()">Submit</button>
   
-    <script src="script.js"></script>
+    <script src="script8.js"></script>
 </body>
 </html>
