--- a/8p.html
+++ b/8p.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <img src="https://www.biljettkiosken.se/imgdb/biljettkiosken/stuk/events/6673-big.jpg" alt="På spåret logga">
-    <h1>Fel! Kan du ta det på...</h1>
+    <h1>Fel! Kan gissa på...</h1>
     <h2>8 poäng</h2>
     <p>I våran stad behöver du knappast gå blek för här finns ett stort sminkutbud eller varför inte ta lite rakvatten? För att nå stadens centrum måste du kunna navigera, karta hjälper föga, synd att man inte var orienterare.</p>
     <p>Gissning:</p>
