--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h1>Vart är vi på väg?</h1>
     <h2>10 poäng</h2>
     <p>Resan tar sin början här och leder dig söderut, till en plats där historia och nutid sammanflätas. Väl i hamn kan du övernatta på kacklande biprodukt, hoppas ni behagar.</p>
-    <p>Enter your answer below:</p>
+    <p>Gissning:</p>
     <input type="text" id="userInput">
     <button onclick="checkAnswer()">Submit</button>
   
