--- a/incorrect2.html
+++ b/incorrect2.html
@@ -20,8 +20,8 @@
 <body>
     <img src="https://www.biljettkiosken.se/imgdb/biljettkiosken/stuk/events/6673-big.jpg" alt="På spåret logga">
     <h1>Fel! Kan gissa på...</h1>
-    <h2>8 poäng</h2>
-    <p>I våran stad behöver du knappast gå blek för här finns ett stort sminkutbud eller varför inte ta lite rakvatten? För att nå stadens centrum måste du kunna navigera, karta hjälper föga, synd att man inte var orienterare.</p>
+    <h2>6 poäng</h2>
+    <p>Vill du ha bra utsikt är våran stad ett utmärkt val, Erik på berget kan nog hissa upp dig eller varför inte ta karbinen upp när du besöker Lille skutts hemland. Mytologin spelar stor roll här såväl asar som greker, det är kanon.</p>
     <p>Gissning:</p>
     <input type="text" id="userInput">
     <button onclick="checkAnswer()">Submit</button>
