--- a/incorrect1.html
+++ b/incorrect1.html
@@ -23,9 +23,10 @@
     <h2>8 poäng</h2>
     <p>I våran stad behöver du knappast gå blek för här finns ett stort sminkutbud eller varför inte ta lite rakvatten? För att nå stadens centrum måste du kunna navigera, karta hjälper föga, synd att man inte var orienterare.</p>
     <p>Gissning:</p>
-    <input type="text" id="userInput">
-    <button onclick="checkAnswer()">Submit</button>
-  
-    <script src="script.js"></script>
+  <input type="text" id="newAnswerInput">
+  <button onclick="checkNewAnswer()">Submit</button>
+
+  <script src="script.js"></script>
+
 </body>
 </html>
