--- a/incorrect4.html
+++ b/incorrect4.html
@@ -19,13 +19,9 @@
 </head>
 <body>
     <img src="https://www.biljettkiosken.se/imgdb/biljettkiosken/stuk/events/6673-big.jpg" alt="På spåret logga">
-    <h1>Fel! Kan gissa på...</h1>
-    <h2>2 poäng</h2>
-    <p>Till kyrkan går alla i denna fiskeborg där färgerna på den finska flaggan ligger varmt om hjärtat. Sveriges 2a och på landets framsida.</p>
-    <p>Gissning:</p>
-    <input type="text" id="checkNewNewNewNewNewAnswer">
-    <button onclick="checkNewNewNewNewNewAnswer()">Submit</button>
-  
+    <h1>Det är också fel! Men vi ska till...</h1>
+    <h2>GÖTEBORG</h2>
+
     <script src="script.js"></script>
 </body>
 </html>
