--- a/incorrect2.html
+++ b/incorrect2.html
@@ -23,8 +23,8 @@
     <h2>4 poäng</h2>
     <p>Resan tar sin början här och leder dig söderut, till en plats där historia och nutid sammanflätas. Väl i hamn kan du övernatta på kacklande biprodukt, hoppas ni behagar.</p>
     <p>Gissning:</p>
-    <input type="text" id="checkNewNewNewAnswert">
-    <button onclick="checkNewNewNewAnswer()">Submit</button>
+    <input type="text" id="check3Answer">
+    <button onclick="check3Answer()">Submit</button>
   
     <script src="script.js"></script>
 </body>
