--- a/incorrect3.html
+++ b/incorrect3.html
@@ -23,8 +23,8 @@
     <h2>2 poäng</h2>
     <p>En kal herre från Kanada kan vara en ledtråd till denna änglastad. Vill du shopa räcker Femman långt annars spelar Kurt Olsson gärna bingo. Jag säger som teskedsgumman göta-petter.</p>
     <p>Gissning:</p>
-    <input type="text" id="checkNewNewNewNewAnswer">
-    <button onclick="checkNewNewNewNewAnswer()">Submit</button>
+    <input type="text" id="check4Answer">
+    <button onclick="check4Answer()">Submit</button>
   
     <script src="script.js"></script>
 </body>
