--- a/incorrect1.html
+++ b/incorrect1.html
@@ -24,7 +24,7 @@
     <p>Vill du ha bra utsikt är våran stad ett utmärkt val, Erik på berget kan nog hissa upp dig eller varför inte ta karbinen upp när du besöker Lille skutts hemland. Mytologin spelar stor roll här såväl asar som greker, det är kanon.</p>
     <p>Gissning:</p>
     <input type="text" id="check2Answer">
-    <button onclick="check2answer()">Submit</button>
+    <button onclick="check2Answer()">Submit</button>
   
     <script src="script.js"></script>
 </body>
