--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <img src="https://www.biljettkiosken.se/imgdb/biljettkiosken/stuk/events/6673-big.jpg" alt="På spåret logga">
     <h1>Vart är vi på väg?</h1>
     <h2>10 poäng</h2>
-    <p>Resan tar sin början  och leder dig söderut, till en plats där historia och nutid sammanflätas. Väl i hamn kan du övernatta på kacklande biprodukt, hoppas ni behagar.</p>
+    <p>Resan tar sin början  och leder dig söderut, till en plats där historia och nutid sammanflätas. Väl i hamn kan du övernatta på kacklande biprodukt, hoppas ni behagar. </p>
+    <p> Ps. Du måste skriva in en gissning för att komma vidare.</p>
     <p>Gissning:</p>
     <input type="text" id="userInput">
     <button onclick="checkAnswer()">Submit</button>
