--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </style>
 </head>
 <body>
-    <img src="https://www.biljettkiosken.se/imgdb/biljettkiosken/stuk/events/6673-big.jpg" alt="På spåret logga">
+    <img src="https://photos.google.com/photo/AF1QipOu8UA4mMPAhLno4yE0wpDbXty174Z_YhFUm4Ko.png" alt="På spåret logga">
     <h1>Vart är vi på väg?</h1>
     <h2>10 poäng</h2>
     <p>Resan tar sin början  och leder dig söderut, till en plats där historia och nutid sammanflätas. Väl i hamn kan du övernatta på kacklande biprodukt, hoppas ni behagar. </p>
