--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </style>
 </head>
 <body>
-    <img src="https://lh3.googleusercontent.com/pw/ADCreHfzwAbgujs-i_soQv38Q5Pl1lURYAZmI9A1PkPo__yT4FCH498I1ZDRsQ7rvj888SpNCcFYQdNPMHxj60mn9EH_gy-etBSWAi-wu1yZbpJIM6GNPc8Lu7aELLGxN3l4a7lJ9EevOtkK9TXe-8Qg6GSpQ-c4a67PKXk1D9RkQ-qS_XqFtabV2S5T69dLjtJhr96C4yCjOfa0BJ4uJbzkMXUoPeH_bC072hL7eCAU8CL6JxCBeW2O2GeNzkKWdIt-vCtPKn8yeMNK8dfBZh7CtxJlUHzssOcI6ZSPuRauwbj7M2ctVENMk99k4d-SZnU_WlTTPVEn3HXYf3KbItLy3fzLSW7JyF9aw7de2jKQpeJlrTtU6vNI0Q5PR7mhnPnWUW-_BilhN-fAGdVXW6uWDTL73e9RCt41QXUuqeKr5jE7u-Rdwdjt3hHrwjjICyR1SzZ5XaH7C60ZTj2dbNe3IJ0ijGpoW_vcYgqjjLGq-TcnsvoI9TCA_LovMPQm9ZdHPiHbQgopuAwdAnBXSZbpY0e42joR-DnUOG8MBaujdX26YE26hTjMsygLWzL5o0P9e-xnXs7XfQyAYLkcU2gNdKpLzAKsjPijgCzvoOJPhmzsvcziIyVCtpVFMxT3klvqMDLFBv0gCMBCgoR12bW-8PDBc9ufZeLfIDxqdnkuRaRxSepZOxYRQn_DPaOHZxPDtt_htKSR6N5ndj-v_9mc0OrhW-MwSFBOIcrKUqxp5XvXXxvkBBgUpuljodzuAZbsN6RabNUoXVEaLHJoAYCIjGmBovNlZFYx4p2CnNqHC1ixiY-YjGYCV1rqeAtnZZShFzYYtU91EN71i95ubmPBGDZhPNSLP8QwV1JuTL7SgyU5EXs3nLqMZcxSZaX6BmtgnDB4ag=w1158-h428-s-no-gm?authuser=0.png" alt="På spåret logga">
+    <img src="https://www.adobe.com/content/dam/cc/us/en/creativecloud/illustration-adobe-illustration/how-to-draw-trees/draw-trees_fb-img_1200x800.jpg" alt="På spåret logga">
     <h1>Vart är vi på väg?</h1>
     <h2>10 poäng</h2>
     <p>Resan tar sin början  och leder dig söderut, till en plats där historia och nutid sammanflätas. Väl i hamn kan du övernatta på kacklande biprodukt, hoppas ni behagar. </p>
